2008-06-11  Ramon Novoa  <rnovoa@artica.es>

	* win32/bin/pandora_agent.conf: Added remote_config option.

2008-06-10  Ramon Novoa  <rnovoa@artica.es>

	*  win32/bin/PandoraAgent.exe: Updated to r849.

2008-06-10  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora.cc: Updated version information.

2008-06-10  Ramon Novoa  <rnovoa@artica.es>

	* win32/PandoraAgent.dev: Updated.
	* win32/misc/md5.c, win32/misc/md5.h: Added to repository.
	  Implementation of MD5 (RFC 1321).
	* win32/misc/pandora_file.cc, win32/misc/pandora_file.h: Added remote
	  configuration checking related functions.
	* win32/pandora_windows_service.cc, win32/pandora_windows_service.h:
	  Added support for remote configuration checking.

2008-06-09  Sancho Lerena <slerena@gmail.com>

	macOS agent update.

2008-06-09  Ramon Novoa  <rnovoa@artica.es>

	* linux/plugins/grep_log: Fixed command line parameter check.
	* linux/pandora_agent: Added support for remote configuration.
	* linux/pandora_agent.conf: Added remote_config option.

2008-05-29  Sancho Lerena <slerena@gmail.com>

	* openWRT/README.openwrt: Some additional information about wput command
	replacing old SSH transfer method.
	
	* openWRT/pandora_agent: Updated to use ftp(wput) instead of buggy ssh.

	* openWRT/pandora_agent.conf: Deleted ssh method and unused stuff for
	this little agent.

	* linux/plugins/grep_log: Updated plugin to use a module name for each
	call, passed as 2th argument.

	* linux/pandora_agent.conf: Deleted checksum reference and commented
        plugin sample, and using the new syntax for plugin.

2008-05-27  Ramon Novoa  <rnovoa@artica.es>

	* linux/pandora_agent.conf: Added a plugin declaration example.

2008-05-25 Sancho Lerena <slerena@artica.es>

	* linux/pandora_agent: New cron mode, new ftp mode that do not use
	.netrc anymore, uses password embedded into .conf. Also a few fixes
	and removed checksum mode (deprecated!).

	* linux/pandora_agent.conf: Updated .conf

2008-05-19  Ramon Novoa  <rnovoa@artica.es>
