@@ -1,5 +1,11 @@
 2008-06-11  Ramon Novoa  <rnovoa@artica.es>
 
+	* win32/pandora_strutils.cc, win32/pandora_strutils.h,
+	  win32/modules/pandora_module.cc: Added support for floating-point
+	  numbers.
+
+2008-06-11  Ramon Novoa  <rnovoa@artica.es>
+
 	* win32/bin/pandora_agent.conf: Added remote_config option.
 
 2008-06-10  Ramon Novoa  <rnovoa@artica.es>
